feat: add IRPF calculation for BR stocks and FIIs with detailed buy, sell, and dividend data
- Introduced `BrCurrencyConverter` for BRL operations and calculations.
- Added `FiiBuyReader` and `FiiSellReader` for FIIs, with associated unit tests.
- Implemented `BrIrpfTable` component in the frontend for displaying BR stock and FII IRPF data.
- Enhanced `IrpfResource` and `IrpfCalculator` to handle BR stocks and FIIs with validations for malformed symbols, overselling, and future operations.
- Updated test cases and resources for comprehensive BR stock and FII scenarios.